--- a/PiClimate.Monitor/Pages/_Imports.razor
+++ b/PiClimate.Monitor/Pages/_Imports.razor
@@ -6,5 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using PiClimate.Monitor
+@using PiClimate.Monitor.Components
+@using PiClimate.Monitor.Models
 @using PiClimate.Monitor.Pages
 @using PiClimate.Monitor.Pages.Components
+@using PiClimate.Monitor.Services
