--- a/PiClimate.Monitor/Pages/_ViewImports.cshtml
+++ b/PiClimate.Monitor/Pages/_ViewImports.cshtml
@@ -9,6 +9,6 @@
 @using PiClimate.Monitor.Components
 @using PiClimate.Monitor.Models
 @using PiClimate.Monitor.Pages
-@using PiClimate.Monitor.Pages.Components
 @using PiClimate.Monitor.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PiClimate.Monitor
