--- a/PiClimate.Monitor/Static/css/style.css
+++ b/PiClimate.Monitor/Static/css/style.css
@@ -1,15 +1,7 @@
-@import url("bootstrap.min.css");
+@import "bootstrap.min.css";
+@import "Chart.min.css";
 
-#blazor-error-ui
+body
 {
-  display: none;
-  position: fixed;
-  background-color: rgba(255, 255, 255, 0.7);
-  inset: 0;
-}
-
-#blazor-error-ui > *
-{
-  position: relative;
-  top: 50vh;
+  min-width: var(--breakpoint-sm);
 }
