Extracted the chart logic into the Chart partial view.
Also made the float rounding to 3 decimal digits during data
acquisition as more precision has no actual sense, and updated the
time formatting on chart.

--- a/PiClimate.Monitor/Pages/Index.cshtml
+++ b/PiClimate.Monitor/Pages/Index.cshtml
@@ -1,9 +1,17 @@
 ﻿@page
 @{
   Layout = "_Layout";
+
+  var chartParameters = new ChartParameters
+  {
+    ChartId = "pressure-chart",
+    Filter = new MeasurementFilter
+    {
+      FromTime = DateTime.Now - TimeSpan.FromHours(1),
+      ToTime = DateTime.Now,
+      Resolution = 60 * 60
+    }
+  };
 }
 
-<div class="position-relative">
-  <canvas id="pressure-chart"></canvas>
-</div>
-<script src="/js/monitor.js"></script>
+<partial name="Chart" model="@chartParameters" />
