--- a/PiClimate.Monitor/Pages/_ViewImports.cshtml
+++ b/PiClimate.Monitor/Pages/_ViewImports.cshtml
@@ -4,10 +4,10 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.JSInterop
 @using PiClimate.Monitor
 @using PiClimate.Monitor.Components
 @using PiClimate.Monitor.Models
 @using PiClimate.Monitor.Pages
+@using Index = PiClimate.Monitor.Pages.Index
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, PiClimate.Monitor
