--- a/PiClimate.Monitor/Pages/Shared/NavMenu.cshtml
+++ b/PiClimate.Monitor/Pages/Shared/NavMenu.cshtml
@@ -6,6 +6,14 @@
   <hr class="border-light w-100 d-none d-lg-block" />
 
   <li class="nav-item px-3">
-    <a class="nav-link" href="/">Main</a>
+    <a class="nav-link" asp-page="@nameof(Monitor)" asp-page-handler="@Monitor.PressurePageHandler">Pressure</a>
+  </li>
+
+  <li class="nav-item px-3">
+    <a class="nav-link" asp-page="@nameof(Monitor)" asp-page-handler="@Monitor.TemperaturePageHandler">Temperature</a>
+  </li>
+
+  <li class="nav-item px-3">
+    <a class="nav-link" asp-page="@nameof(Monitor)" asp-page-handler="@Monitor.HumidityPageHandler">Humidity</a>
   </li>
 </ul>
