--- a/PiClimate.Monitor/Static/css/style.css
+++ b/PiClimate.Monitor/Static/css/style.css
@@ -48,7 +48,10 @@ body
 .failed::before
 {
   position: absolute;
-  inset: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
   content: "";
   z-index: 10000;
@@ -82,4 +85,11 @@ body
 {
   color: var(--danger);
   content: attr(data-failed-notice) !important;
+}
+
+.empty .chart-summary,
+.updating .chart-summary,
+.failed .chart-summary
+{
+  display: none;
 }
