Added the data resolution limiting value.
The maximal data resolution limiting is important as even the values of
several thousands entries per time period may significantly load the
server.
Also added displaying of the number of data entries acquired for the
selected time period.

--- a/PiClimate.Monitor/Static/css/style.css
+++ b/PiClimate.Monitor/Static/css/style.css
@@ -19,7 +19,7 @@ body
   display: none;
 }
 
-.time
+.date
 {
   color: var(--time-color) !important;
   border-color: var(--time-color) !important;
