--- a/PiClimate.Monitor/Pages/Shared/Chart.cshtml
+++ b/PiClimate.Monitor/Pages/Shared/Chart.cshtml
@@ -7,63 +7,72 @@
   <canvas id="@Model.ChartId" class="chart-canvas"></canvas>
 
   <div id="@Model.ChartId-summary" class="chart-summary container-fluid py-2">
-    <div class="row">
-      <div class="time text-right col-3 col-xl-2">
+    <div class="date row">
+      <div class="text-right col-3 col-xl-2">
         Period start:
       </div>
-      <div class="time text-left col-9 col-xl-4">
+      <div class="text-left col-9 col-xl-4">
         <span class="period-start">???</span>
       </div>
-      <div class="time text-right col-3 col-xl-2">
+      <div class="text-right col-3 col-xl-2">
         Period end:
       </div>
-      <div class="time text-left col-9 col-xl-4">
+      <div class="text-left col-9 col-xl-4">
         <span class="period-end">???</span>
       </div>
     </div>
 
     <div class="pressure row">
-      <div class="pressure text-right col-3 col-xl-2">
+      <div class="text-right col-3 col-xl-2">
         Min pressure:
       </div>
-      <div class="pressure text-left col-9 col-xl-4">
+      <div class="text-left col-9 col-xl-4">
         <span class="min-pressure">???</span> @Model.PressureUnits (<span class="min-pressure-timestamp">???</span>)
       </div>
-      <div class="pressure text-right col-3 col-xl-2">
+      <div class="text-right col-3 col-xl-2">
         Max pressure:
       </div>
-      <div class="pressure text-left col-9 col-xl-4">
+      <div class="text-left col-9 col-xl-4">
         <span class="max-pressure">???</span> @Model.PressureUnits (<span class="max-pressure-timestamp">???</span>)
       </div>
     </div>
 
     <div class="temperature row">
-      <div class="temperature text-right col-3 col-xl-2">
+      <div class="text-right col-3 col-xl-2">
         Min temperature:
       </div>
-      <div class="temperature text-left col-9 col-xl-4">
+      <div class="text-left col-9 col-xl-4">
         <span class="min-temperature">???</span> @Model.TemperatureUnits (<span class="min-temperature-timestamp">???</span>)
       </div>
-      <div class="temperature text-right col-3 col-xl-2">
+      <div class="text-right col-3 col-xl-2">
         Max temperature:
       </div>
-      <div class="temperature text-left col-9 col-xl-4">
+      <div class="text-left col-9 col-xl-4">
         <span class="max-temperature">???</span> @Model.TemperatureUnits (<span class="max-temperature-timestamp">???</span>)
       </div>
     </div>
 
     <div class="humidity row">
-      <div class="humidity text-right col-3 col-xl-2">
+      <div class="text-right col-3 col-xl-2">
         Min humidity:
       </div>
-      <div class="humidity text-left col-9 col-xl-4">
+      <div class="text-left col-9 col-xl-4">
         <span class="min-humidity">???</span> @Model.HumidityUnits (<span class="min-humidity-timestamp">???</span>)
       </div>
-      <div class="humidity text-right col-3 col-xl-2">
+      <div class="text-right col-3 col-xl-2">
         Max humidity:
       </div>
-      <div class="humidity text-left col-9 col-xl-4">
+      <div class="text-left col-9 col-xl-4">
         <span class="max-humidity">???</span> @Model.HumidityUnits (<span class="max-humidity-timestamp">???</span>)
+      </div>
+    </div>
+
+    <div class="text-info statistics row">
+      <div class="text-right col-3 col-xl-2">
+        Entries displayed:
+      </div>
+      <div class="text-left col-9 col-xl-4">
+        <span class="entries-count">???</span>
       </div>
     </div>
   </div>
