--- a/PiClimate.Monitor/Pages/_ViewImports.cshtml
+++ b/PiClimate.Monitor/Pages/_ViewImports.cshtml
@@ -1,4 +1,12 @@
-﻿@using System.Net.Http
+﻿@*
+  This Source Code Form is subject to the terms of the Mozilla Public
+  License, v. 2.0. If a copy of the MPL was not distributed with this
+  file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
+  Copyright © 2020 Maxim Yudin <stibiu@yandex.ru>
+*@
+
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
