--- a/PiClimate.Monitor/Pages/Shared/_Layout.cshtml
+++ b/PiClimate.Monitor/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
         </aside>
 
         @* Main content. *@
-        <main id="main" class="bg-light overflow-auto col">
+        <main id="main" class="bg-light overflow-auto col py-3">
           @RenderBody()
         </main>
 
