--- a/PiClimate.Monitor/Pages/_ViewImports.cshtml
+++ b/PiClimate.Monitor/Pages/_ViewImports.cshtml
@@ -12,6 +12,7 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Http.Extensions
 @using PiClimate.Monitor
 @using PiClimate.Monitor.Components
 @using PiClimate.Monitor.Models
