--- a/PiClimate.Monitor/Pages/_ViewImports.cshtml
+++ b/PiClimate.Monitor/Pages/_ViewImports.cshtml
@@ -13,6 +13,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Http.Extensions
+@using Microsoft.AspNetCore.WebUtilities
 @using PiClimate.Monitor
 @using PiClimate.Monitor.Components
 @using PiClimate.Monitor.Models
