--- a/PiClimate.Monitor/Pages/Shared/_Layout.cshtml
+++ b/PiClimate.Monitor/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/Chart.bundle.min.js"></script>
-    <script src="/js/PiClimate.Monitor.js"></script>
+    <script src="/js/Monitor.js"></script>
   </head>
 
   <body>
