--- a/PiClimate.Monitor/Pages/Shared/NavMenu.cshtml
+++ b/PiClimate.Monitor/Pages/Shared/NavMenu.cshtml
@@ -21,6 +21,8 @@
     var lastDayQuery = new Dictionary<string, object> {{nameof(MeasurementFilter.TimePeriod), TimePeriods.Day}};
     var lastWeekQuery = new Dictionary<string, object> {{nameof(MeasurementFilter.TimePeriod), TimePeriods.Week}};
     var lastMonthQuery = new Dictionary<string, object> {{nameof(MeasurementFilter.TimePeriod), TimePeriods.Month}};
+    var filter = ViewData[nameof(MeasurementFilter)] as MeasurementFilter ?? new MeasurementFilter();
+    var isCustomTimespan = Context.Request.Query.ContainsKey(nameof(MeasurementFilter.FromTime));
 
     <li class="nav-item px-3">
       <form method="POST" asp-page="@nameof(Auth)" asp-page-handler="@Auth.LogoutHandler" asp-all-route-data="@returnPath">
@@ -42,6 +44,42 @@
 
     <li class="nav-item px-3">
       <page-link class="nav-link" page="@nameof(Monitor)" query-parameters="@lastMonthQuery">Last month</page-link>
+    </li>
+
+    <li class="nav-item px-3">
+      <a class="nav-link dropdown-toggle @(isCustomTimespan ? "active" : "collapsed")" data-toggle="collapse"
+         href="#custom-period-form">
+        Custom timespan
+      </a>
+    </li>
+
+    <li class="w-100 d-lg-none"></li>
+
+    <li id="custom-period-form" class="nav-item bg-secondary rounded collapse w-100 my-2 @(isCustomTimespan ? "show" : "")">
+      <form class="form-row flex-lg-column align-items-end mx-3 mt-3 mb-1 my-lg-3" method="GET" asp-page="@nameof(Monitor)">
+        <div class="form-group col-6 col-md-3 col-lg">
+          <label for="from-time-input">From:</label>
+          <input id="from-time-input" class="form-control form-control-sm"
+                 asp-for="@filter.FromTime" name="@nameof(MeasurementFilter.FromTime)" />
+        </div>
+
+        <div class="form-group col-6 col-md-3 col-lg">
+          <label for="to-time-input">To:</label>
+          <input id="to-time-input" class="form-control form-control-sm"
+                 asp-for="@filter.ToTime" name="@nameof(MeasurementFilter.ToTime)" />
+        </div>
+
+        <div class="form-group col-6 col-md-3 col-lg">
+          <label for="resolution-input">Resolution:</label>
+          <input id="resolution-input" class="form-control form-control-sm"
+                 min="@MeasurementFilter.MinimalResolution" max="@MeasurementFilter.MaximalResolution"
+                 asp-for="@filter.Resolution" name="@nameof(MeasurementFilter.Resolution)" />
+        </div>
+
+        <div class="form-group col-6 col-md-3 col-lg mb-lg-1">
+          <button id="from-time-input" class="btn btn-block btn-sm btn-light">Show</button>
+        </div>
+      </form>
     </li>
   }
 </ul>
