--- a/PiClimate.Monitor/Static/css/style.css
+++ b/PiClimate.Monitor/Static/css/style.css
@@ -14,6 +14,18 @@ body
   min-width: var(--breakpoint-sm);
 }
 
+.dropdown-toggle::after
+{
+  border-top: 0;
+  border-bottom: solid .3em;
+}
+
+.dropdown-toggle.collapsed::after
+{
+  border-top: solid .3em;
+  border-bottom: 0;
+}
+
 .chart-canvas
 {
   display: none;
