--- a/PiClimate.Monitor/Pages/Shared/_Layout.cshtml
+++ b/PiClimate.Monitor/Pages/Shared/_Layout.cshtml
@@ -13,11 +13,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>@nameof(PiClimate) @nameof(PiClimate.Monitor)</title>
     <base href="~/" />
-    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" asp-append-version="true" />
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/Chart.bundle.min.js"></script>
-    <script src="/js/Monitor.js"></script>
+    <script src="/js/moment-with-locales.min.js"></script>
+    <script src="/js/Chart.min.js"></script>
+    <script src="/js/Monitor.js" asp-append-version="true"></script>
   </head>
 
   <body>
