--- a/PiClimate.Monitor/Pages/_ViewImports.cshtml
+++ b/PiClimate.Monitor/Pages/_ViewImports.cshtml
@@ -6,6 +6,8 @@
   Copyright © 2020 Maxim Yudin <stibiu@yandex.ru>
 *@
 
+@using System
+@using System.Globalization
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
