Reworked the latest data page.
Now it displays the data table with a number of last logged
measurements.
Also added a WebAPI endpoint for the latest data available at
"/Data/Latest" path.

--- a/PiClimate.Monitor/Static/css/style.css
+++ b/PiClimate.Monitor/Static/css/style.css
@@ -31,28 +31,29 @@ body
   display: none;
 }
 
-.date
+.text-date
 {
   color: var(--time-color) !important;
-  border-color: var(--time-color) !important;
 }
 
-.pressure
+.text-pressure
 {
   color: var(--pressure-color) !important;
-  border-color: var(--pressure-color) !important;
 }
 
-.temperature
+.text-temperature
 {
   color: var(--temperature-color) !important;
-  border-color: var(--temperature-color) !important;
 }
 
-.humidity
+.text-humidity
 {
   color: var(--humidity-color) !important;
-  border-color: var(--humidity-color) !important;
+}
+
+.border-inherit
+{
+  border-color: inherit !important;
 }
 
 .empty::before,
