--- a/PiClimate.Monitor/Pages/Latest.cshtml
+++ b/PiClimate.Monitor/Pages/Latest.cshtml
@@ -12,11 +12,13 @@
   Layout = "_Layout";
 }
 
-<div id="latest-data mx-3">
-  @if (Model.LatestMeasurement != null)
+<div id="latest-data">
+  @if (Model.LatestMeasurements.Any())
   {
+    var rowIndex = 1;
+
     @* Expired data warning. *@
-    if (DateTime.Now - Model.LatestMeasurement.Timestamp > Model.ObsoleteDataPeriod)
+    if (DateTime.Now - Model.LatestMeasurements.First().Timestamp > Model.ObsoleteDataPeriod)
     {
       <div class="alert alert-warning text-center mb-3">
         The latest measurement has been logged more than @Model.ObsoleteDataPeriod.TotalMinutes minute(s) ago.
@@ -24,42 +26,43 @@
       </div>
     }
 
-    @* Data panel. *@
-    <div class="row">
-      <script>
-        let timestamp = "@Model.LatestMeasurement.Timestamp.ToString(CultureInfo.InvariantCulture)";
-        let locale = navigator.languages ? navigator.languages[0] : navigator.language;
-        let dateFormat = "L";
-        let timeFormat = "LTS";
-        moment.locale(locale);
-        let date = moment(timestamp).format(dateFormat);
-        let time = moment(timestamp).format(timeFormat);
-      </script>
+    <script>
+      let timestamp = "";
+      let timestampFormat = "L LTS";
+      let locale = navigator.languages ? navigator.languages[0] : navigator.language;
+      moment.locale(locale);
+    </script>
 
-      <div class="date col-6 col-xl-3 text-center mb-4">
-        <div class="h5">Date</div>
-        <div class="h2"><script>document.write(time)</script></div>
-        <div class="h5"><script>document.write(date)</script></div>
-      </div>
+    @* Data table. *@
+    <table class="table border-dark border-bottom">
+      <tr class="text-center">
+        <th colspan="6" class="h5 border-inherit">Last logged measurements</th>
+      </tr>
 
-      <div class="pressure col-6 col-xl-3 text-center mb-4">
-        <div class="h5">Pressure</div>
-        <div class="h2">@Model.LatestMeasurement.Pressure</div>
-        <div class="h5">@Model.PressureUnits</div>
-      </div>
+      <tr>
+        <th class="border-inherit">#</th>
+        <th class="text-date border-inherit">Date</th>
+        <th class="text-pressure border-inherit">Pressure, @MeasurementDefaults.DefaultPressureUnits</th>
+        <th class="text-temperature border-inherit">Temperature, @MeasurementDefaults.DefaultTemperatureUnits</th>
+        <th class="text-humidity border-inherit">Humidity, @MeasurementDefaults.DefaultHumidityUnits</th>
+      </tr>
 
-      <div class="temperature col-6 col-xl-3 text-center mb-4">
-        <div class="h5">Temperature</div>
-        <div class="h2">@Model.LatestMeasurement.Temperature</div>
-        <div class="h5">@Model.TemperatureUnits</div>
-      </div>
-
-      <div class="humidity col-6 col-xl-3 text-center mb-4">
-        <div class="h5">Humidity</div>
-        <div class="h2">@Model.LatestMeasurement.Humidity</div>
-        <div class="h5">@Model.HumidityUnits</div>
-      </div>
-    </div>
+      @foreach (var measurement in Model.LatestMeasurements)
+      {
+        <tr>
+          <td class="border-inherit">@(rowIndex++)</td>
+          <td class="text-date border-inherit">
+            <script>
+              timestamp = "@measurement.Timestamp.ToString(CultureInfo.InvariantCulture)";
+              document.write(moment(timestamp).format(timestampFormat))
+            </script>
+          </td>
+          <td class="text-pressure border-inherit">@measurement.Pressure</td>
+          <td class="text-temperature border-inherit">@measurement.Temperature</td>
+          <td class="text-humidity border-inherit">@measurement.Humidity</td>
+        </tr>
+      }
+    </table>
   }
   else
   {
