--- a/PiClimate.Monitor/Pages/Shared/Chart.cshtml
+++ b/PiClimate.Monitor/Pages/Shared/Chart.cshtml
@@ -15,7 +15,7 @@
   <canvas id="@Model.ChartId" class="chart-canvas"></canvas>
 
   <div id="@Model.ChartId-summary" class="chart-summary container-fluid py-2">
-    <div class="date row">
+    <div class="text-date row">
       <div class="text-right col-3 col-xl-2">
         Period start:
       </div>
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="pressure row">
+    <div class="text-pressure row">
       <div class="text-right col-3 col-xl-2">
         Min pressure:
       </div>
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="temperature row">
+    <div class="text-temperature row">
       <div class="text-right col-3 col-xl-2">
         Min temperature:
       </div>
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <div class="humidity row">
+    <div class="text-humidity row">
       <div class="text-right col-3 col-xl-2">
         Min humidity:
       </div>
